--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
